@@ -18,12 +18,11 @@
         </ul>
     </div>
 
-    <{if $errorMessage != ''}>
-        <!-- Error message-->
-        <div class="errorMsg"><{$errorMessage}></div>
+    <{if $error}>
+        <div class='errorMsg'><{$error}></div>
     <{/if}>
 
     <!-- Submit form -->
-    <div class="tdmdownloads-submitform"><{$themeForm}></div>
+    <div class="tdmdownloads-submitform"><{$form}></div>
 
 </div>
